assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

// Import partials from `sass_dir` (defaults to `_sass`)
@import "_bootstrap";
@import "_bootstrap-reboot";
@import "_bootstrap-grid";

@import "./native.css";

@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");

$Lato: "Lato", sans-serif;

body {
  font-family: $Lato !important;
  display: flex;
}

.navbar {
  height: 4em;
  font-size: 16px;
  background-color: #ffffff;
  // box-shadow: 0em 0.15em 2em rgba(0, 0, 0, 0.15);
  border-bottom: 1px solid #e3e8ee;
  .navbar-container {
    padding-right: 0px;
    padding-left: 0px;
  }
  &-brand {
    flex: 0 0 16.6666666667%;
    max-width: 16.6666666667%;
    margin-right: 80px;
    color: #dc3840 !important;
    font-size: 2em;
    display: flex;
    align-items: center;
    img {
      width: 300px;
      max-width: 300px;
      height: auto;
      padding-right: 5px;
    }
  }
  &-brand-container {
    display: flex;
    justify-content: space-between;
  }
  &-content-container {
    background-color: #fff;
    flex-grow: 1;
  }
  &-search {
    flex-grow: 1;
    display: flex;
    justify-content: space-between;
  }
}

.sidebar {
  width: 20%;
  padding-left: 15px;
}

.side-nav {
  position: fixed;
  top: 65px;
  width: 100%;
  background-color: rgba(255, 255, 255, 1);
  overflow-y: hidden;
  height: calc(100vh - 70px);
  white-space: nowrap;
  display: flex;
  flex-flow: column;
  
  &.top {
    position: initial;
    height:400px;
    border-left: 1px solid #e3e8ee;
    border-bottom: 1px solid #e3e8ee;
    border-right: 1px solid #e3e8ee;
  }

  &:hover {
    overflow-y: auto;
  }


  @media (min-width: 991px) {
    background-color: rgba(255, 255, 255, 0);
    width: 19%;
  }

  li.open > a > span:after {
    content: " ";
  }

  li > a > {
    span {
      float: right;
      font-size: 19px;
      font-weight: bolder;

      &:after {
        content: " ";
      }
    }
  }

  .nav-item {
    &.open {
      .nav-link {
        font-weight: 500;
        color: #dc3840;
      }
    }
    .nav-link {
      font-weight: 500;
      font-size: 15px;
      color: rgb(74, 74, 74);
      padding: 0.5rem 0.5rem;
    }
  }
}

#sub-nav,
#sub-sub-nav {
  .list-group-item {
    background-color: rgba(255, 255, 255, 0);
    border: none;
    font-size: 14px;
    padding: 0.5rem 1rem 0.5rem 1.75rem;

    > a {
      color: rgb(74, 74, 74);
      text-decoration: none;
      display: block;
      &:hover {
        color: #dc3840;
        display: block;
      }
      &.contains {
        font-weight: 500;
      }
    }
    &.open {
      background-color: rgba(255, 255, 255, 0);
    }
    &.active {
      background-color: #eee;
      border-color: #eee;
    }
  }
}

.page-content {
  margin-top: 64px;
  height: calc(100vh - 64px);
  .wrapper {
    height: 100%;
    .row {
      height: 100%;
    }
  }

  .port {
    border-right: 1px solid #e3e8ee;
  }
  .starboard {
    padding: 0px 48px;
    > h1:first-of-type {
      font-size: 2.75em;
      color: #dc3840;
    }
  }
}

.openapi-frame {
  width: 100%;
  height: 100vh;
  border: none;
}

a {
  color: #0067d5;
}

img {
  max-width: 100%;
  height: auto;
}

h1 {
  font-size: 2.5rem;
  margin: 0.5rem 0;
  font-weight: 300;
  color: #dc3840;
}

h1::before {
  display: block;
  content: " ";
  margin-top: -64px;
  height: 64px;
  visibility: hidden;
  pointer-events: none;
}

h2 {
  font-size: 2rem;
  margin-top: 0.5rem;
  font-weight: 500;
  color: #25292d;
  padding-top: 16px;
}

h3 {
  font-size: 1.5rem;
  margin-top: 0.5rem;
  font-weight: 300;
  color: #111111;
  padding-top: 12px;
}

h4 {
  font-size: 1.25rem;
  margin-top: 0;
  font-weight: 500;
  color: #25292d;
  padding-top: 10px;
}

h5 {
  font-size: 0.85rem;
  margin-top: 0;
  font-weight: 700;
  color: #25292d;
  padding-top: 10px;
}

form > input[type="search"] {
  min-width: 600px;
  border: 1px solid #e3e8ee;
}

/* IN-PAGE TOC */

div#toc {
  ul {
    background-color: whitesmoke;
    padding: 5px;
    border-radius: 5px;
    max-width: 500px;
    color: gray;
    > li {
      margin: 0px 0px 0px 22px;
      font-size: 95%;
      list-style: none;
      ul {
        padding-left: 8px;

        li {
          list-style: disc;
        }
      }
    }
  }
}

div#toc > ul::before {
  content: "Contents";
  font-size: 1rem;
  font-weight: 600;
  color: #25292d;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  width: 70px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
}

table {
  @extend .table;
  @extend .table-striped;
  @extend .table-bordered;

  thead {
    @extend .thead-light;
  }
}

